# graduation-thesis-HCI

./: .gitignore  pyproject.toml
crawl/: application.py  constants.py  sheet.py
test/: crawled_data_analyze.ipynb  youtube_download.ipynb
