[tool.poetry]
name = "graduation-thesis-hci"
version = "0.1.0"
description = ""
authors = ["y00njae <rladbswo12@gist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
black = "^23.12.1"
selenium = "^4.16.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
